--- a/CalculoIMC/app/src/main/AndroidManifest.xml
+++ b/CalculoIMC/app/src/main/AndroidManifest.xml
@@ -3,15 +3,20 @@
     package="app.com.br.calculoimc">
 
     <application
+        android:name=".splash.TimeActivity"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".splash.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".splash.SplashActivity"
+            android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
