--- a/CalculoIMC/app/src/main/AndroidManifest.xml
+++ b/CalculoIMC/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:name=".splash.TimeActivity"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_imc"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
